tests/test2/fail/fail-unop.m2
int main(){
	String a;
	a = "js";

	++a;

	return 0;
}